# Blended-Learning

./: .gitignore  Blended_Learning_API_Postman_Testing_Guide.md  Blended_Learning_Local_Postman_Environment.json  Blended_Learning_Recommendation_API_Postman_Collection.json  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
api/: __init__.py  database.py  llm_service.py  main.py  ml_model.py  models.py  nlp_tags.py  schemas.py  seed.py
api/routes/: recommendations.py  students.py
app/: streamlit_app.py
models/: kmodes_cluster_label_map.json
notebook/: 01-data_collection.ipynb  02-data_preprocessing.ipynb  04-student_segmentation.ipynb  05-pre-nlp.ipynb  05-translation_preprocessing.ipynb  06-nlp.ipynb  07-llm.ipynb  Gower_refactored.ipynb  student_recommendation_reports_markdown.ipynb  student_recommendation_reports_markdown.md  test.ipynb
notebook/models/: kmodes_feature_columns.json  kmodes_model.pkl  kmodes_preprocessing_info.json
src/blended_learning/config/: settings.py
src/blended_learning/ingestion/: kobo_loader.py
src/blended_learning/llm/: openrouter.py
src/blended_learning/llm/prompts/: student_recommendation_prompt.txt
src/blended_learning/nlp/: translate_kh_service.py
src/blended_learning/preprocessing/: clearner.py
src/blended_learning/utils/: decorator.py
